# Sierpinski_Zoom

./: CMakeLists.txt
Simple OpenGL Image Library/: CMakeLists.txt  Thumbs.db
Simple OpenGL Image Library/src/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  sierpinski_carpet.cpp  sierpinski_carpet.h  texture_mapping.h
